# geoInsight-AI

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: pipeline-general-template.md
.github/skills/create-gh-issue/: SKILL.md
data/raw/: animal_track.json
docs/: PRD.md  data.md  project_proposal.md  system_design.md  tickets.md
scripts/: build_kb.py
src/geoinsight/: __init__.py  config.py
src/geoinsight/agents/: __init__.py  discovery.py  graph.py  guardrail.py  parquet_agent.py  state.py  supervisor.py  visualization.py  zarr_agent.py
src/geoinsight/api/: __init__.py  app.py  schemas.py  sessions.py
src/geoinsight/knowledge_base/: __init__.py  catalog.py  gazetteer.py  ingestion.py  models.py  retriever.py  vector_store.py
src/geoinsight/llm/: __init__.py  bedrock.py  prompts.py
src/geoinsight/tools/: __init__.py  geo_utils.py  parquet_tools.py  plotting.py  time_utils.py  zarr_tools.py
src/geoinsight/ui/: __init__.py  gradio_app.py
tests/: conftest.py
tests/e2e/: test_scenarios.py
tests/unit/: test_gazetteer.py  test_geo_utils.py  test_retriever.py  test_time_utils.py
