[project]
name = "geoinsight-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "chromadb>=0.5.0",
    "fastapi>=0.115.0",
    "geopandas>=1.0.0",
    "gradio>=4.40.0",
    "langchain>=1.3.6",
    "langchain-aws>=0.2.0",
    "langchain-chroma>=0.1.0",
    "langgraph>=0.2.0",
    "matplotlib>=3.9.0",
    "pyarrow>=17.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "s3fs>=2024.6.0",
    "uvicorn[standard]>=0.30.0",
    "xarray>=2024.6.0",
    "zarr>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pre-commit>=3.7.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.4",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
